Intro 1 - Health, Added data to PS1 - Macro
I did one of the introduction sections for my health paper and added the
data for macro

--- a/Y2S1/Macro/PSets/ps1/ps1.qmd
+++ b/Y2S1/Macro/PSets/ps1/ps1.qmd
@@ -4,13 +4,13 @@ format: pdf
 ---
 
 ```{r include=FALSE}
-dataPath <- file.path("/Users/tate/SchoolWork/Y2S1/Macro/Data/PSID/")
 library(AER)
 library(haven)
 library(tidyverse)
+library(readxl)
 ```
 
 ```{r}
-df <- read.spss("/Users/tate/Downloads/fam1999er/FAM1999ER.sps")
+df <- read_excel("~/SchoolWork/Y2S1/Macro/Data/PSID/J350946.xlsx")
 head(df)
 ```
