--- a/Y2S1/Metrics/PSets/PS1/PS1.qmd
+++ b/Y2S1/Metrics/PSets/PS1/PS1.qmd
@@ -96,7 +96,7 @@ summary(IV)
 Explain why both are also the same as the IV estimate from Part 3. What is the intuition behind the coefficient on $\tilde{D}$ in b)?
 Optional: explain the relationship between the standard errors of the estimates in a), b), and Part 3.
 
-# a)
+#### a)
 ```{r}
 df <- df %>%
   mutate(
@@ -106,7 +106,7 @@ df <- df %>%
 model_a <- lm(Y_i ~ D_hat, data = df)
 summary(model_a)
 ```
-# b)
+#### b)
 ```{r}
 model_b <- lm(Y_i ~ D_i + D_tilde, data = df)
 summary(model_b)
@@ -180,6 +180,7 @@ df <- df %>%
     compliers = (pZ*D_hat)/pD
   )
 length(df$compliers)
+cor(df$Z_i, df$D_i)
 ```
 
 As shown in the last part, there can be no always-takers or never-takers as people will not defy treatment $D_i$
@@ -197,9 +198,588 @@ df <- df %>%
     compliers = (pZ*D_hat)/pD
   )
 length(df$compliers)
+cor(df$Z_i, df$D_i)
 ```
 
 The proportion remains the same as the coefficient on $Z_i$ does not effect anything when $Z_i = 0$. Thus, all
 units will comply.
 
-## Part 10:
+## Part 10: How does correlation between $D \text{and} Z$ vary with the proportion of compliers when we change $\alpha_Z$?
+While the proportion of compliers does not vary, we see higher correlation when $\alpha_Z = 10$, such that $corr(Z_i, D_i) = 0.96$.
+When $\alpha_Z = 5$, $corr(Z_i, D_i) = 0.67$. 
+
+## Part 11: Show that we can justify the claim of no external validity problems from item 1.
+
+## Part 12: Repeat with seed values of 2, 3, and 4
+
+```{r}
+set.seed(2)
+
+df <- data.frame(
+  id = 1:10000,
+  epsilon_D = rnorm(10000, mean = 0, sd = 1),
+  epsilon_Y = rnorm(10000, mean = 0, sd = 1),
+  U_i = rnorm(10000, mean = 0, sd = 0.5)
+)
+
+z_i <- runif(10000, min = 0, max = 1)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y
+  )
+OLS <- lm(Y_i ~ D_i, data = df) 
+summary(OLS)
+IV <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV)
+df <- df %>%
+  mutate(
+    D_hat = predict(lm(D_i ~ Z_i, data = df)),
+    D_tilde = D_i - D_hat
+  )
+model_a <- lm(Y_i ~ D_hat, data = df)
+summary(model_a)
+
+model_b <- lm(Y_i ~ D_i + D_tilde, data = df)
+summary(model_b)
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5a)
+
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5b)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV6a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6a)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+  )
+IV6b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6b)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+```
+
+```{r}
+set.seed(3)
+df <- data.frame(
+  id = 1:10000,
+  epsilon_D = rnorm(10000, mean = 0, sd = 1),
+  epsilon_Y = rnorm(10000, mean = 0, sd = 1),
+  U_i = rnorm(10000, mean = 0, sd = 0.5)
+)
+
+z_i <- runif(10000, min = 0, max = 1)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y
+  )
+OLS <- lm(Y_i ~ D_i, data = df) 
+summary(OLS)
+IV <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV)
+df <- df %>%
+  mutate(
+    D_hat = predict(lm(D_i ~ Z_i, data = df)),
+    D_tilde = D_i - D_hat
+  )
+model_a <- lm(Y_i ~ D_hat, data = df)
+summary(model_a)
+model_b <- lm(Y_i ~ D_i + D_tilde, data = df)
+summary(model_b)
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5a)
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5b)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV6a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6a)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+  )
+IV6b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6b)
+
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+```
+
+```{r}
+set.seed(4)
+
+df <- data.frame(
+  id = 1:10000,
+  epsilon_D = rnorm(10000, mean = 0, sd = 1),
+  epsilon_Y = rnorm(10000, mean = 0, sd = 1),
+  U_i = rnorm(10000, mean = 0, sd = 0.5)
+)
+
+z_i <- runif(10000, min = 0, max = 1)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y
+  )
+OLS <- lm(Y_i ~ D_i, data = df) 
+summary(OLS)
+IV <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV)
+df <- df %>%
+  mutate(
+    D_hat = predict(lm(D_i ~ Z_i, data = df)),
+    D_tilde = D_i - D_hat
+  )
+model_a <- lm(Y_i ~ D_hat, data = df)
+summary(model_a)
+model_b <- lm(Y_i ~ D_i + D_tilde, data = df)
+summary(model_b)
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5a)
+
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5b)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV6a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6a)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+  )
+IV6b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6b)
+
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+```
+
+## Part 13: Now, recreate DGP with $N=500$.
+
+```{r}
+set.seed(1)
+
+df <- data.frame(
+  id = 1:500,
+  epsilon_D = rnorm(10000, mean = 0, sd = 1),
+  epsilon_Y = rnorm(10000, mean = 0, sd = 1),
+  U_i = rnorm(10000, mean = 0, sd = 0.5)
+)
+
+z_i <- runif(10000, min = 0, max = 1)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y
+  )
+OLS <- lm(Y_i ~ D_i, data = df) 
+summary(OLS)
+IV <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV)
+df <- df %>%
+  mutate(
+    D_hat = predict(lm(D_i ~ Z_i, data = df)),
+    D_tilde = D_i - D_hat
+  )
+model_a <- lm(Y_i ~ D_hat, data = df)
+summary(model_a)
+model_b <- lm(Y_i ~ D_i + D_tilde, data = df)
+summary(model_b)
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5a)
+
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5b)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV6a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6a)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+  )
+IV6b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6b)
+
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+```
+```{r}
+set.seed(2)
+
+df <- data.frame(
+  id = 1:500,
+  epsilon_D = rnorm(10000, mean = 0, sd = 1),
+  epsilon_Y = rnorm(10000, mean = 0, sd = 1),
+  U_i = rnorm(10000, mean = 0, sd = 0.5)
+)
+
+z_i <- runif(10000, min = 0, max = 1)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y
+  )
+OLS <- lm(Y_i ~ D_i, data = df) 
+summary(OLS)
+IV <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV)
+df <- df %>%
+  mutate(
+    D_hat = predict(lm(D_i ~ Z_i, data = df)),
+    D_tilde = D_i - D_hat
+  )
+model_a <- lm(Y_i ~ D_hat, data = df)
+summary(model_a)
+model_b <- lm(Y_i ~ D_i + D_tilde, data = df)
+summary(model_b)
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5a)
+
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5b)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV6a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6a)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+  )
+IV6b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6b)
+
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+```
+```{r}
+set.seed(3)
+
+df <- data.frame(
+  id = 1:500,
+  epsilon_D = rnorm(10000, mean = 0, sd = 1),
+  epsilon_Y = rnorm(10000, mean = 0, sd = 1),
+  U_i = rnorm(10000, mean = 0, sd = 0.5)
+)
+
+z_i <- runif(10000, min = 0, max = 1)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y
+  )
+OLS <- lm(Y_i ~ D_i, data = df) 
+summary(OLS)
+IV <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV)
+df <- df %>%
+  mutate(
+    D_hat = predict(lm(D_i ~ Z_i, data = df)),
+    D_tilde = D_i - D_hat
+  )
+model_a <- lm(Y_i ~ D_hat, data = df)
+summary(model_a)
+model_b <- lm(Y_i ~ D_i + D_tilde, data = df)
+summary(model_b)
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5a)
+
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5b)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV6a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6a)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+  )
+IV6b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6b)
+
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+```
+```{r}
+set.seed(4)
+
+df <- data.frame(
+  id = 1:10000,
+  epsilon_D = rnorm(10000, mean = 0, sd = 1),
+  epsilon_Y = rnorm(10000, mean = 0, sd = 1),
+  U_i = rnorm(10000, mean = 0, sd = 0.5)
+)
+
+z_i <- runif(10000, min = 0, max = 1)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y
+  )
+OLS <- lm(Y_i ~ D_i, data = df) 
+summary(OLS)
+IV <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV)
+df <- df %>%
+  mutate(
+    D_hat = predict(lm(D_i ~ Z_i, data = df)),
+    D_tilde = D_i - D_hat
+  )
+model_a <- lm(Y_i ~ D_hat, data = df)
+summary(model_a)
+model_b <- lm(Y_i ~ D_i + D_tilde, data = df)
+summary(model_b)
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5a)
+
+df <- df %>%
+  mutate(
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV5b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV5b)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 1 * Z_i + 6 * U_i + epsilon_Y
+)
+IV6a <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6a)
+df <- df %>%
+  mutate(
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + -1 * Z_i + 6 * U_i + epsilon_Y
+  )
+IV6b <- ivreg(Y_i ~ D_i | Z_i, data = df)
+summary(IV6b)
+
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 5 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+df <- df %>%
+  mutate(
+    Z_i = as.numeric(z_i > 0.5),
+    D_i = as.numeric(-4 + 10 * Z_i + 4 * U_i + epsilon_D > 0),
+    Y_i = 3 + 2 * D_i + 0 * Z_i + 6 * U_i + epsilon_Y,
+    pZ = length(Z_i == 1)/length(id),
+    pD = length(D_i == 1)/length(id),
+    compliers = (pZ*D_hat)/pD
+  )
+length(df$compliers)
+cor(df$Z_i, df$D_i)
+```
