--- a/Y2S1/Macro/PSets/ps1/ps1.qmd
+++ b/Y2S1/Macro/PSets/ps1/ps1.qmd
@@ -14,21 +14,23 @@ library(tidyverse)
 df <- read_dta("~/SchoolWork/Y2S1/Macro/Data/PSID/PSID.dta")
 ```
 
-```{r}
+```{r, echo=FALSE}
 pivot <- tribble(
   ~year, ~age, ~sex, ~labor_par, ~earnings_annual, ~hourly, ~hr_worked, ~educ_HS, ~educ_coll, ~ind, ~wealth,
   1999, "ER13010", "ER13011", "ER13601", "ER13218", "ER13224", "ER13363", "ER15937", "ER15952", "ER13216", "S417",
-  2001, "ER17013", "ER17014", "ER17375", "ER17729", "ER17235", "ER17393", "ER19998", "ER20014", "ER17227", "S517",
-  2003, "ER21017", "ER21018", "ER21139", "ER21153", "ER21159", "ER21356", "ER23435", "ER23451", "ER21146", "S617",
-  2005, "ER25017", "ER25018", "ER25328", "ER25142", "ER25148", "ER25345", "ER27402", "ER27148", "ER25128", "S717",
+  2001, "ER17013", "ER17014", "ER17375", "ER17229", "ER17235", "ER17393", "ER19998", "ER20014", "ER17227", "S517",
+  2003, "ER21017", "ER21018", "ER21339", "ER21153", "ER21159", "ER21356", "ER23435", "ER23451", "ER21146", "S617",
+  2005, "ER25017", "ER25018", "ER25328", "ER25142", "ER25148", "ER25345", "ER27402", "ER27418", "ER25128", "S717",
   2007, "ER36017", "ER36018", "ER36333", "ER36147", "ER36153", "ER36350", "ER40574", "ER40590", "ER36133", "S817",
   2009, "ER42017", "ER42018", "ER42360", "ER42182", "ER42188", "ER42148", "ER46552", "ER46568", "ER42168", "ER46970",
   2011, "ER47317", "ER47318", "ER47673", "ER47495", "ER47501", "ER47456", "ER51913", "ER51929", "ER47480", "ER52394",
   2013, "ER53017", "ER53018", "ER53636", "ER53195", "ER53201", "ER53156", "ER57669", "ER57685", "ER53180", "ER58211",
   2015, "ER60017", "ER60018", "ER60388", "ER60210", "ER60216", "ER60171", "ER64821", "ER64837", "ER60195", "ER65408",
-  2017, "ER66017", "ER66018", "ER66666", "ER66211", "ER66492", "ER66172", "ER70755", "ER70909", "ER66196", "ERER71485"
+  2017, "ER66017", "ER66018", "ER66666", "ER66211", "ER66492", "ER66172", "ER70755", "ER70909", "ER66196", "ER71485"
 )
+```
 
+```{r}
 df <- df %>%
   mutate(
     famid = coalesce(!!!rlang::syms(c(
@@ -36,3 +38,24 @@ df <- df %>%
       "ER36009","ER25009","ER21009","ER17022","ER13019"
     )))
   )
+
+long <- map_dfr(1:nrow(pivot), function(i){
+  sel <- pivot[i, ]
+  df %>%
+    transmute(
+      famid,
+      year = sel$year,
+      age = .data[[sel$age]],
+      inc = .data[[sel$earnings_annual]],
+      labor_par = .data[[sel$labor_par]],
+      hourly = .data[[sel$hourly]],
+      hr_worked = .data[[sel$hr_worked]],
+      educ_HS = .data[[sel$educ_HS]],
+      educ_coll = .data[[sel$educ_coll]],
+      ind = .data[[sel$ind]],
+      wealth = .data[[sel$wealth]]
+    )
+})
+
+glimpse(long)
+```
