--- a/Y2S1/Health/ResearchProject/Paper3/paper3.tex
+++ b/Y2S1/Health/ResearchProject/Paper3/paper3.tex
@@ -44,19 +44,13 @@
 \renewcommand{\headrulewidth}{0.4pt}
 
 % Title page information
-\title{Your Academic Paper Title: \\
-A Comprehensive Investigation}
+\title{Drug Search and Physician Hazard: \\
+An Investigation into Addict Behavior and Policy Remedies}
 
 \author{
-    Your Name\thanks{Corresponding author: your.email@university.edu} \\
-    \textit{Department of Your Field} \\
-    \textit{Your University} \\
-    \textit{City, Country} \\
-    \\
-    Second Author \\
-    \textit{Department of Related Field} \\
-    \textit{Another University} \\
-    \textit{City, Country}
+    Tate Mason\thanks{Tate.Mason@uga.edu} \\
+    \textit{University of Georgia} \\
+    \textit{Athens, Georgia} \\
 }
 
 \date{\today}
@@ -246,3 +240,4 @@ Dataset 3 & 1,000,000 & 100,000 & 128 \\
 \subsection{Future Work}
 \label{subsec:future_work}
 
+\end{document}
