--- a/Y2S1/Macro/ResearchProject/Hotspot-Project.tex
+++ b/Y2S1/Macro/ResearchProject/Hotspot-Project.tex
@@ -40,16 +40,15 @@
 \pagestyle{fancy}
 \fancyhf{}
 \rhead{\thepage}
-\lhead{\textit{Your Paper Title}}
+\lhead{\textit{placeholder}}
 \renewcommand{\headrulewidth}{0.4pt}
 
 % Title page information
-\title{The Price of Comfort: Investigating Willingness to Pay for \\
-Medically Assisted Suicide}
+\title{placeholder - hotspot effect on immigrant lifetime wealth \\
+and labor outcomes}
 
 \author{
     Tate Mason\thanks{Tate.Mason@uga.edu} \\
-    \textit{John Munro Godfrey Sr. Dept. of Economics} \\
     \textit{University of Georgia} \\
     \textit{Athens, Georgia} \\
 }
@@ -71,9 +70,15 @@ Medically Assisted Suicide}
 % Abstract
 \begin{abstract}
 \noindent % Write a concise summary (150-250 words) covering: research problem, methodology, key findings, and significance. State your main contributions clearly.
+As the world becomes increasingly connected, it is of import to analyze outcomes of immigrants. This paper seeks to understand the role of potential informal 
+networks on the labor and wealth outcomes of immigrants moving to what I term as "hotspot cities", cities in which their ethnic group makes up a significant 
+proportion of the population. Utilizing a dynamic equilibrium approach and leveraging extensive microdata, gaining an understanding of the effect of 
+the group on outcomes is plausible. Tracking households with datasets like IPUMS and ACS, as well as leveraging general trends with PSID, this research will
+parse out the effect of moving to a hotspot city versus moving elsewhere.
 
 \vspace{0.3cm}
 \noindent \textbf{Keywords:} % List 3-6 keywords relevant to your research
+Wealth outcomes, immigration, informal networks
 \end{abstract}
 
 \newpage
@@ -83,15 +88,6 @@ Medically Assisted Suicide}
 \section{Introduction}
 \label{sec:introduction}
 
-In recent decades, mental health has become a focal point of health research. This is warranted given the spike in diagnoses of diseases like depression, anxiety, or other more severe
-afflictions. Cases of suicide have also grown to a massive degree, with people feeling the need to take their own life as an escape from their disorder. Traditionally, this has been a
-private event, which is seen as an act of emotional desperation. However, in recent years, countries like Spain, Portual, and Canada have implemented medically assisted suicide policies
-which seek to grant agency over death to those with incurable diseases or otherwise those in tremendous pain with no hope of alleviation.
-
-These policies raise interesting questions. Of course, morals are of concern to some, but in an economic sense there are key factors which warrant research. Of interest for this paper,
-what is the willingness to pay of the terminally ill to put an end to their life if a policy like this was put into place in the United States? This kind of procedure, of course, requires
-pharmaceutical resources, and thus would come at cost. Beyond the landscape of implemented policy, it would be interesting to determine the moral hazard of a policy like this. For instance,
-if a person with severe depression and chronic suicidal ideation engaging in riskier behavior as they pursue death by either risk or medically assisted suicide.
 % Provide a broad introduction to your field and gradually narrow to your specific research question.
 % Motivate why this work is necessary and important.
 
@@ -253,8 +249,6 @@ Dataset 3 & 1,000,000 & 100,000 & 128 \\
 
 % Summarize your main contributions, key findings, and their significance.
 % Avoid simply repeating the abstract - provide a synthesis that reinforces your contributions.
-
-In this paper, we presented [brief summary of contribution]. Our experimental evaluation demonstrates [key findings]. The implications of this work include [broader impact]. Future research directions include [future work].
 
 \section*{Acknowledgments}
 
