--- a/Y2S1/Macro/PSets/ps1/Pres/ps1_pres.tex
+++ b/Y2S1/Macro/PSets/ps1/Pres/ps1_pres.tex
@@ -59,7 +59,7 @@
 \begin{frame}{Data}
   \begin{tabular}{||l|c|c|c|c|c||}
     & 1999 & 2001 & 2003 & 2005 & 2007 & 2009 & 2011 & 2013 & 2015 & 2017 \\
-    Sample Size & & & & & & & & & & & \\
+    Sample Size & 81283 &  & & & & & & & & & \\
     Sample by Category: & & & & & & & & \\
     25-30
     31-35
